# capture-tool

./: .gitignore  README.md  index.html  package-lock.json  package.json
browser-extension/: build.mjs  build.sh  manifest.json  package-lock.json  package.json  tsconfig.json
browser-extension/src/: background.ts  content.ts  popup.css  popup.html  popup.ts  types.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cdp.rs  lib.rs  main.rs  settings.rs  websocket.rs
src-tauri/src/events/: commands.rs  mod.rs
src-tauri/src/processing/: commands.rs  mod.rs
src-tauri/src/recorder/: commands.rs  mod.rs
src-tauri/src/session/: commands.rs  db.rs  mod.rs  models.rs
src-tauri/src/voiceover/: commands.rs  mod.rs
src/components/: BrowserCapture.tsx  ExportView.tsx  ProcessingView.tsx  RecordingPanel.tsx  ReviewEditor.tsx  SessionLibrary.tsx  Settings.tsx  Sidebar.tsx  StepCard.tsx  Timeline.tsx  TranscriptOverlay.tsx  VoiceoverPanel.tsx
src/lib/: tauri.ts
src/stores/: recordingStore.ts  reviewStore.ts  sessionStore.ts
src/styles/: app.css
workers/: extract_assets.py  generate_mdx.py  requirements.txt  segment.py  transcribe.py
