[package]
name = "capture-tool"
version = "0.1.0"
description = "Screen capture to documentation tool"
authors = ["devjoshi"]
edition = "2021"

[lib]
name = "capture_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
rdev = "0.5"
active-win-pos-rs = "0.8"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tungstenite = "0.26"
ureq = "3"
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
